==== Version 0.11.3 changes since 0.11.2 ====
* i18n fixes from Simon Darlington
* Fix bug that reversed ingredient order when adding ingredients to a group.


==== Version 0.11.2 changes since 0.11.1 ====

* Add new icons from Yula Zubritsky
* Add nifty timer.
* Parse times written out as words.

==== Version 0.11.1 changes since 0.11.0 ====

* Fix bug that broke changing the shopping category of an ingredient
  from within the ingredient editing view.
* Fix traceback when filling ingredient-editor from a unitless
  ingredient.
* Fix problem with recipe-links not working when they contained
  unicode (such as the unicode for 1/2, 1/4, etc.)
* Make page-chooser in edit-view highlight the first page when we open
  a new recipe card. Otherwise, the function of the widget is unclear.

==== Version 0.11.0 changes since 0.10.1 ====

* Fix ingredient editing so that changes are no longer automatically
  committed to the DB. Now the ingredient tab of the recipe edit window
  works like everything else, with a standard "save" model.
* While we're at it, we prevent crashes from happening.
* Make Undo work more consistently throughout recipe card.
* Make database upgrade happen at runtime rather than install-time --
  this allows us to play nicely with RPM and DEB packages.

==== Version 0.10.2 changes since 0.10.1 ====

* Fix bug causing export from recipe card not to multiply ingredients
  properly.
* Fix various problems with ingredient editing (display of updates,
  undo/redo)
* Fix dialog responses so hitting return and escape works more consistently.
* Fix bug in addition of ingredients in shopping list.

==== Version 0.10.1 changes since 0.10.0 ====
* Fix bug causing recipe cards to be destroyed when closed.
* Fix bug causing "None" to show up in shopping list when there is no
  unit.
* Fix popup menus throughout.

==== Version 0.10.0 changes cince 0.9.0.3 ====
* Switch database backend to SQLite. The backend is still abstract, so