@@ -1,7 +1,8 @@
 ==== Version 0.11.3 changes since 0.11.2 ====
 * i18n fixes from Simon Darlington
 * Fix bug that reversed ingredient order when adding ingredients to a group.
-
+* Allow fraction-use to be turned off, and make it default to off for
+  German (other locales can default it to off via defaults_foo.py)
 
 ==== Version 0.11.2 changes since 0.11.1 ====
 
